--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <link rel="stylesheet" href="css/style.css">
     <body>
 
+    <div class="container">
+        <div class="main"></div>
+        <aside></aside>
+        <aside></aside>
+        <aside></aside>
+        <footer></footer>
 
+
+
+
+        </div>
 
 
 
