--- a/index.html
+++ b/index.html
@@ -4,23 +4,41 @@
 <head>
     <title> Responsive grid system </title>
     <meta charset="utf-8">
-    </head>
-    <link rel="stylesheet" href="css/style.css">
-    <body>
+</head>
+<link rel="stylesheet" href="css/style.css">
+
+<body>
 
     <div class="container">
-        <div class="main"></div>
-        <aside></aside>
-        <aside></aside>
-        <aside></aside>
-        <footer></footer>
+        <div class="header">
+
+    <nav>
+        <ul>
+        <li><a href="#">Home</a></li>
+            <li><a href="#">About us</a></li>                         <li><a href="#">Gallery</a></li>
+             <li><a href="#">Reservations</a></li>
+                <li><a href="#">Contact us</a></li>
 
 
 
+        </ul>
 
+
+            </nav>
+        </div>
+        <div class="main">
         </div>
 
+        <div class="top-aside"></div>
+
+        <div class="middle-aside"></div>
+        <div class="bottom-aside"></div>
 
 
-    </body>
+    </div>
+
+
+
+</body>
+
 </html>
