Added main body and aside information

--- a/index.html
+++ b/index.html
@@ -27,12 +27,42 @@
             </nav>
         </div>
         <div class="main">
+            <h3> Profile </h3>
+            <p> lorem Ipsum dolar sit. lorem Ipsum dolar sit.
+            lorem Ipsum dolar sit.  lorem Ipsum dolar sit. lorem Ipsum dolar sit. lorem Ipsum dolar sit. lorem Ipsum dolar sit. lorem Ipsum dolar sit. lorem Ipsum dolar sit. lorem Ipsum dolar sit. lorem Ipsum dolar sit. lorem Ipsum dolar sit. lorem Ipsum dolar sit. lorem Ipsum dolar sit. lorem Ipsum dolar sit. lorem Ipsum dolar sit. lorem Ipsum dolar sit. lorem Ipsum dolar sit.</p>
+
         </div>
 
-        <div class="top-aside"></div>
+        <div class="top-aside"> <p>lorem Ipsum dolar sit.
+            lorem Ipsum dolar sit.
+            lorem Ipsum dolar sit.
+            lorem Ipsum dolar sit.
 
-        <div class="middle-aside"></div>
-        <div class="bottom-aside"></div>
+
+
+            </p></div>
+
+        <div class="middle-aside">
+        <p>lorem Ipsum dolar sit.
+            lorem Ipsum dolar sit.
+            lorem Ipsum dolar sit.
+            lorem Ipsum dolar sit.lorem Ipsum dolar sit.
+            lorem Ipsum dolar sit.
+            lorem Ipsum dolar sit.
+            lorem Ipsum dolar sit.
+
+
+
+            </p>
+        </div>
+        <div class="bottom-aside"><p>lorem Ipsum dolar sit.
+            lorem Ipsum dolar sit.
+            lorem Ipsum dolar sit.
+            lorem Ipsum dolar sit.
+
+
+
+            </p></div>
 
 
     </div>
