--- a/index.html
+++ b/index.html
@@ -11,13 +11,81 @@
 </head>
 
 <body>
+    <div class="container">
+
+        <!--The first row contains the header, navigation bar and background image -->
+        <div class="row">
+
+            <div class="large-12 columns">
+
+                <nav>
+                    <ul class="mcd-menu">
+
+                        <li>
+                            <a href="#"> <i class="fa fa-home"></i>
+                                <strong>Home</strong>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#"> <i class="fa fa-edit"></i>
+                                <strong>About me</strong>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#"> <i class="fa fa-comments-o"></i>
+                                <strong>Portfolio</strong>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#"> <i class="fa fa-picture-o"></i>
+                                <strong>Portfolio</strong>
+                            </a>
+                        </li>
+
+
+                    </ul>
 
 
 
-    <script src="js/vendor/jquery.min.js"></script>
-    <script src="js/vendor/what-input.min.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <script src="js/app.js"></script>
+
+
+                </nav>
+
+
+
+
+            </div>
+
+        </div>
+        <!--End Header-->
+
+        <!--The second row -->
+        <div class="row">
+
+            <div class="large-6 columns">
+
+
+            </div>
+            <div class="large-6 columns">
+
+
+            </div>
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+        <script src="js/vendor/jquery.min.js"></script>
+        <script src="js/vendor/what-input.min.js"></script>
+        <script src="js/foundation.min.js"></script>
+        <script src="js/app.js"></script>
 </body>
 
 </html>
