modified navigation and made it responsive

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#"> <i class="fa fa-comments-o"></i>
+                            <a href="#"> <i class="fa fa-picture-o"></i>
                                 <strong>Portfolio</strong>
                             </a>
                         </li>
                         <li>
-                            <a href="#"> <i class="fa fa-picture-o"></i>
-                                <strong>Portfolio</strong>
+                            <a href="#"> <i class="fa fa-comments-o"></i>
+                                <strong>Blog</strong>
                             </a>
                         </li>
 
