added background image in header

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
     <div class="container">
 
         <!--The first row contains the header, navigation bar and background image -->
-        <div class="row">
 
+
+
+             <div class="row">
+            <div class="large-12 columns imagebg">
+               <div class="row">
             <div class="large-12 columns">
 
                 <nav>
@@ -46,18 +50,11 @@
 
                     </ul>
 
-
-
-
-
                 </nav>
-
-
-
 
             </div>
 
-        </div>
+                </div></div></div>
         <!--End Header-->
 
         <!--The second row -->
