added overlay content that will appear when image is on hover

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Beth Personal website</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/app.css" />
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 
 
 
-             <div class="row">
+        <div class="row">
             <div class="large-12 columns imagebg">
                <div class="row">
             <div class="large-12 columns">
@@ -52,9 +52,51 @@
 
                 </nav>
 
-            </div>
+                <div class="caption-overlay">
+                    <h1 class="caption_overlay_title">Hi, I'm <span></span>Ciku Mwangi</span>
 
-                </div></div></div>
+  </h1>
+                    <p class="caption_overlay_content"> A sofware Developer. Just wonna make cool websites
+
+                    </p>
+                </div>
+                <div class="row">
+                    <div class="large-12 columns">
+
+                        <nav>
+                            <ul class="mcd-menu">
+
+                                <li>
+                                    <a href="#"> <i class="fa fa-home"></i>
+                                        <strong>Home</strong>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#"> <i class="fa fa-edit"></i>
+                                        <strong>About me</strong>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#"> <i class="fa fa-picture-o"></i>
+                                        <strong>Portfolio</strong>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#"> <i class="fa fa-comments-o"></i>
+                                        <strong>Blog</strong>
+                                    </a>
+                                </li>
+
+
+                            </ul>
+
+                        </nav>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
         <!--End Header-->
 
         <!--The second row -->
