--- a/index.html
+++ b/index.html
@@ -20,46 +20,6 @@
 
         <div class="row">
             <div class="large-12 columns imagebg">
-               <div class="row">
-            <div class="large-12 columns">
-
-                <nav>
-                    <ul class="mcd-menu">
-
-                        <li>
-                            <a href="#"> <i class="fa fa-home"></i>
-                                <strong>Home</strong>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#"> <i class="fa fa-edit"></i>
-                                <strong>About me</strong>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#"> <i class="fa fa-picture-o"></i>
-                                <strong>Portfolio</strong>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#"> <i class="fa fa-comments-o"></i>
-                                <strong>Blog</strong>
-                            </a>
-                        </li>
-
-
-                    </ul>
-
-                </nav>
-
-                <div class="caption-overlay">
-                    <h1 class="caption_overlay_title">Hi, I'm <span></span>Ciku Mwangi</span>
-
-  </h1>
-                    <p class="caption_overlay_content"> A sofware Developer. Just wonna make cool websites
-
-                    </p>
-                </div>
                 <div class="row">
                     <div class="large-12 columns">
 
@@ -92,40 +52,37 @@
 
                         </nav>
 
-                    </div>
 
+                        <div class="content-paper">
+                            <h1 class="content_paper_name">Hi, I'm <span></span>Ciku Mwangi</span>
+
+  </h1>
+                            <p class="content_paper_info"> A sofware Developer. Just wonna make cool websites
+
+                            </p>
+                        </div>
+                        <!--
+<div class="caption-overlay">
+                            <h1 class="caption_overlay_title">Hi, I'm <span></span>Ciku Mwangi</span>
+
+  </h1>
+                            <p class="caption_overlay_content"> A sofware Developer. Just wonna make cool websites
+
+                            </p>
+                        </div>
+-->
+
+                    </div>
                 </div>
             </div>
-        </div>
-        <!--End Header-->
+            <!--End Header-->
 
-        <!--The second row -->
-        <div class="row">
+            <!--The second row -->
 
-            <div class="large-6 columns">
-
-
-            </div>
-            <div class="large-6 columns">
-
-
-            </div>
-
-        </div>
-
-
-
-
-
-
-
-
-
-
-        <script src="js/vendor/jquery.min.js"></script>
-        <script src="js/vendor/what-input.min.js"></script>
-        <script src="js/foundation.min.js"></script>
-        <script src="js/app.js"></script>
+            <script src="js/vendor/jquery.min.js"></script>
+            <script src="js/vendor/what-input.min.js"></script>
+            <script src="js/foundation.min.js"></script>
+            <script src="js/app.js"></script>
 </body>
 
 </html>
