added second row containing 2 columns

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <p class="content_paper_info"> A sofware Developer. Just wonna make cool websites
 
                             </p>
-                        </div>
+                        </div>   <!--End Header-->
                         <!--
 <div class="caption-overlay">
                             <h1 class="caption_overlay_title">Hi, I'm <span></span>Ciku Mwangi</span>
@@ -74,10 +74,16 @@
 
                     </div>
                 </div>
-            </div>
-            <!--End Header-->
+                 <!--The second row -->
+            <div class="row second">
+               <div class="large-6 columns"></div>
+               <div class="large-6 columns"></div>
 
-            <!--The second row -->
+            </div>
+            </div>
+
+
+
 
             <script src="js/vendor/jquery.min.js"></script>
             <script src="js/vendor/what-input.min.js"></script>
