--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                             <p class="content_paper_info"> A sofware Developer. Just wonna make cool websites
 
                             </p>
-                        </div>   <!--End Header-->
+                        </div>
+                        <!--End Header-->
                         <!--
 <div class="caption-overlay">
                             <h1 class="caption_overlay_title">Hi, I'm <span></span>Ciku Mwangi</span>
@@ -74,21 +75,35 @@
 
                     </div>
                 </div>
-                 <!--The second row -->
-            <div class="row second">
-               <div class="large-6 columns"></div>
-               <div class="large-6 columns"></div>
-
             </div>
+        </div>
+        <!--The second row -->
+        <div class="row second">
+
+            <div class="large-1 columns">
+                <br>
+            </div>
+            <div class="large-3 columns"></div>
+            <div class="large-1 columns">
+                <br>
+            </div>
+            <div class="large-6 columns">
+                <br>
+            </div>
+            <div class="large-1 columns">
+                <br>
             </div>
 
+        </div>
 
 
 
-            <script src="js/vendor/jquery.min.js"></script>
-            <script src="js/vendor/what-input.min.js"></script>
-            <script src="js/foundation.min.js"></script>
-            <script src="js/app.js"></script>
+
+
+        <script src="js/vendor/jquery.min.js"></script>
+        <script src="js/vendor/what-input.min.js"></script>
+        <script src="js/foundation.min.js"></script>
+        <script src="js/app.js"></script>
 </body>
 
 </html>
