--- a/index.html
+++ b/index.html
@@ -83,21 +83,38 @@
             <div class="large-1 columns">
                 <br>
             </div>
-            <div class="large-3 columns"></div>
+            <div class="large-3 columns">Profile Picture</div>
             <div class="large-1 columns">
                 <br>
             </div>
             <div class="large-6 columns">
-                <br>
+                <h4 class="col about">About Me</h4>
+                <p class="col text"> I am a software developer who is passionate about coding and creating new
+                    <br> stuff that relate to technology.
+                    <br> My hobbies are watching movies, cooking, community development and </p>
+                <h5 class="col skill">Skills</h5>
+                <h6 class="col skill"> Front End Development </h6>
+                <p class="col text">
+                    <ul class="list">
+                        <li> Html5 CSS3</li>
+                        <li> Javascript</li>
+                    </ul>
+                </p>
+
             </div>
             <div class="large-1 columns">
                 <br>
             </div>
-
         </div>
 
+        <div class="row">
+
+            <div class="large-4 columns" </div>
+
+            </div>
 
 
+        </div>
 
 
         <script src="js/vendor/jquery.min.js"></script>
