--- a/index.html
+++ b/index.html
@@ -107,20 +107,27 @@
             </div>
         </div>
 
-        <div class="row">
-
-            <div class="large-4 columns" </div>
-
+        <div class="row three">
+            <h4 class="col about">Portfolio</h4>
+            <div class="large-4 columns">
+                <a href="" <img src="img/FrontEndWebpng" alt="" />
             </div>
+            <div class="large-4 columns">
+                <img src="img/Studio%20360.png" alt="" />
+            </div>
+            <div class="large-4 columns"></div>
 
-
+            <img src="img/Game%20of%20Thrones.png" alt="" />
         </div>
 
 
-        <script src="js/vendor/jquery.min.js"></script>
-        <script src="js/vendor/what-input.min.js"></script>
-        <script src="js/foundation.min.js"></script>
-        <script src="js/app.js"></script>
+    </div>
+
+
+    <script src="js/vendor/jquery.min.js"></script>
+    <script src="js/vendor/what-input.min.js"></script>
+    <script src="js/foundation.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
