Added links to images in portfolio

--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
         <div class="row three">
             <h4 class="col about">Portfolio</h4>
             <div class="large-4 columns">
-                <a href="" <img src="img/FrontEndWebpng" alt="" />
+                <a href="http://frontendsiteb.bitballoon.com/"><img src="img/FrontEndWebpng" alt="" /></a>
             </div>
             <div class="large-4 columns">
-                <img src="img/Studio%20360.png" alt="" />
+                <a href="http://studio-360-designs.bitballoon.com/"> <img src="img/Studio%20360.png" alt="" /></a>
             </div>
             <div class="large-4 columns"></div>
 
-            <img src="img/Game%20of%20Thrones.png" alt="" />
+            <a href="http://gameofthrones.bitballoon.com/"> <img src="img/Game%20of%20Thrones.png" alt="" /></a>
         </div>
 
 
