--- a/index.html
+++ b/index.html
@@ -65,11 +65,8 @@
                         <!--
 <div class="caption-overlay">
                             <h1 class="caption_overlay_title">Hi, I'm <span></span>Ciku Mwangi</span>
-
-  </h1>
-                            <p class="caption_overlay_content"> A sofware Developer. Just wonna make cool websites
-
-                            </p>
+  </h1> <p class="caption_overlay_content"> A sofware Developer. Just wonna make cool websites
+ </p>
                         </div>
 -->
 
@@ -108,18 +105,24 @@
         </div>
 
         <div class="row three">
-            <h4 class="col about">Portfolio</h4>
-            <div class="large-4 columns">
+
+            <div class="large-4 columns img">
                 <a href="http://frontendsiteb.bitballoon.com/"><img src="img/FrontEndWebpng" alt="" /></a>
             </div>
-            <div class="large-4 columns">
-                <a href="http://studio-360-designs.bitballoon.com/"> <img src="img/Studio%20360.png" alt="" /></a>
+            <div class="large-4 columns img">
+                <a href="http://studio-360-designs.bitballoon.com/"><img src="img/Studio%20360.png" alt="" /></a>
             </div>
-            <div class="large-4 columns"></div>
-
-            <a href="http://gameofthrones.bitballoon.com/"> <img src="img/Game%20of%20Thrones.png" alt="" /></a>
+            <div class="large-4 columns img">
+                <a href="http://gameofthrones.bitballoon.com/"> <img src="img/Game%20of%20Thrones.png" alt="" /></a>
+            </div>
         </div>
+        <div class="row four">
+            <div class="large-12 columns">
 
+
+            </div>
+
+        </div>
 
     </div>
 
