Added 3rows in 1st column of row one . to add profile picture

--- a/index.html
+++ b/index.html
@@ -77,12 +77,28 @@
         <!--The second row -->
         <div class="row second">
 
-            <div class="large-1 columns">
-                <br>
+            <!-- row 2 first column
+            with profile picture-->
+
+            <div class="large-4 columns aside">
+                <div class="row aside1">Prof pic</div>
+                <div class="row aside2">
+                    <h5 class="col name"> Ciku Mwangi
+                 </h5></div>
+
+                <div class="row aside3">
+                    <ul class="nav_social">
+                        <li> </li>
+                        <li> </li>
+                    </ul>
+                </div>
+
+
             </div>
-            <div class="large-3 columns">Profile Picture</div>
+
+            <!--          End of  row 2 first column with profile picture-->
             <div class="large-1 columns">
-                <br>
+
             </div>
             <div class="large-6 columns">
                 <h4 class="col about">About Me</h4>
