added social media icons in third row

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+    <link href='https://fonts.googleapis.com/css?family=Teko' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -88,8 +90,10 @@
 
                 <div class="row aside3">
                     <ul class="nav_social">
-                        <li> </li>
-                        <li> </li>
+                        <li>  <a href="#"><i class="fa fa-facebook-square fa-2x" > </i></a></li>
+                        <li>  <i class="fa fa-twitter-square fa-2x"></i></li>
+                        <li><i class="fa fa-google-plus-square fa-2x"></li>
+                        <li> <i class="fa fa-pinterest-square fa-2x"></i></li>
                     </ul>
                 </div>
 
@@ -100,7 +104,7 @@
             <div class="large-1 columns">
 
             </div>
-            <div class="large-6 columns">
+            <div class="large-6 columns col2">
                 <h4 class="col about">About Me</h4>
                 <p class="col text"> I am a software developer who is passionate about coding and creating new
                     <br> stuff that relate to technology.
