changes in portfolio

--- a/index.html
+++ b/index.html
@@ -89,15 +89,16 @@
                  </h5></div>
 
                 <div class="row aside3">
+                    <p class="follow">Follow me on:</p>
                     <ul class="nav_social">
-                        <li>  <a href="#"><i class="fa fa-facebook-square fa-2x" > </i></a></li>
-                        <li>  <i class="fa fa-twitter-square fa-2x"></i></li>
-                        <li><i class="fa fa-google-plus-square fa-2x"></li>
-                        <li> <i class="fa fa-pinterest-square fa-2x"></i></li>
+                        <li><a href="#"><i class="fa fa-facebook-square fa-2x" > </i></a></li>
+                        <li>
+                            <a href="#"> <i class="fa fa-twitter-square fa-2x"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-google-plus-square fa-2x"></i></li>
+                        <li> <a href="#"><i class="fa fa-pinterest-square fa-2x"></i></a></li>
                     </ul>
                 </div>
-
-
             </div>
 
             <!--          End of  row 2 first column with profile picture-->
@@ -125,15 +126,23 @@
         </div>
 
         <div class="row three">
+            <div class="port">Portfolio</div>
 
-            <div class="large-4 columns img">
-                <a href="http://frontendsiteb.bitballoon.com/"><img src="img/FrontEndWebpng" alt="" /></a>
+            <div class="large-4 columns ">
+                <a href="http://frontendsiteb.bitballoon.com/">
+                    <div class="img1"></div>
+                </a>
             </div>
-            <div class="large-4 columns img">
-                <a href="http://studio-360-designs.bitballoon.com/"><img src="img/Studio%20360.png" alt="" /></a>
+            <div class="large-4 columns ">
+                <a href="http://gameofthrones.bitballoon.com/">
+
+                    <div class="img2"></div>
+                </a>
             </div>
-            <div class="large-4 columns img">
-                <a href="http://gameofthrones.bitballoon.com/"> <img src="img/Game%20of%20Thrones.png" alt="" /></a>
+            <div class="large-4 columns ">
+                <a href="http://queens-hotel.bitballoon.com/">
+                    <div class="img3"></div>
+                </a>
             </div>
         </div>
         <div class="row four">
