--- a/index.html
+++ b/index.html
@@ -130,24 +130,31 @@
 
             <div class="large-4 columns ">
                 <a href="http://frontendsiteb.bitballoon.com/">
-                    <div class="img1"></div>
+                    <div class="img1 border"></div>
                 </a>
+                <h6 class="img_title">PSD to HTML page</h6>
             </div>
             <div class="large-4 columns ">
                 <a href="http://gameofthrones.bitballoon.com/">
 
-                    <div class="img2"></div>
+                    <div class="img2 border"></div>
                 </a>
+                <h6 class="img_title">A Movie website </h6>
             </div>
             <div class="large-4 columns ">
                 <a href="http://queens-hotel.bitballoon.com/">
-                    <div class="img3"></div>
+                    <div class="img3 border"></div>
                 </a>
+                <h6 class="img_title">A hotel website </h6>
             </div>
         </div>
         <div class="row four">
             <div class="large-12 columns">
-
+                <h2 class="blogger">Blog</h2>
+                <h4 class="blog header"> How to create a Drop Down Navigation Menu </h4>
+                <p class="blog cont"> Lorem ipsum dolor sit amet, legere dicunt et pro. Nullam denique maluisset ad has. Eam atomorum complectitur ea, vim ut
+                    <br> ornatus singulis. Tibique salutandi similique nec at, vim te iriure honestatis omittantur, nam vide scripta euismod at. </p>
+                <button class="alert hollow button" href="#">Read More</button>
 
             </div>
 
