changes to row 5  ,added css

--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
 
 <!--        row five contents-->
     <div class="row five">
-
+         <div class="large-12 columns five_col">
+        </div>
         </div>
 
     </div>
