--- a/index.html
+++ b/index.html
@@ -165,6 +165,12 @@
          <div class="large-12 columns five_col">
         </div>
         </div>
+<!--        Foooter with contacts and copyright info -->
+        <div class="row footer">
+         <div class="large-6 columns">
+        </div> <div class="large-6 columns">
+        </div>
+        </div>
 
     </div>
 
