--- a/blog.html
+++ b/blog.html
@@ -19,50 +19,68 @@
 
 
 
-        <div class="row">
-            <div class="large-12 columns imagebg">
-                <div class="row">
-                    <div class="large-12 columns">
+        <div class="row blog1">
+            <div class="large-3 columns">
 
-                        <nav>
-                            <ul class="mcd-menu">
+                <nav>
+                    <ul class="mcd-menu">
 
-                                <li>
-                                    <a href="#"> <i class="fa fa-home"></i>
-                                        <strong>Home</strong>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#"> <i class="fa fa-edit"></i>
-                                        <strong>About me</strong>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#"> <i class="fa fa-picture-o"></i>
-                                        <strong>Portfolio</strong>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#"> <i class="fa fa-comments-o"></i>
-                                        <strong>Blog</strong>
-                                    </a>
-                                </li>
+                        <li>
+                            <a href="#"> <i class="fa fa-home"></i>
+                                <strong>Home</strong>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#"> <i class="fa fa-edit"></i>
+                                <strong>About me</strong>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#"> <i class="fa fa-picture-o"></i>
+                                <strong>Portfolio</strong>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#"> <i class="fa fa-comments-o"></i>
+                                <strong>Blog</strong>
+                            </a>
+                        </li>
 
 
-                            </ul>
+                    </ul>
 
-                        </nav>
-
-
+                </nav>
 
 
-                    </div>
+            </div>
+            <div class="large-9 columns">
+                <ul class="inspire">
+
+                    <li> Technology
+                    </li>
+                    <li> Inspiration
+                    </li>
+                    <li> Design
+                    </li>
+
+                </ul>
 
 
-                    <script src="js/vendor/jquery.min.js"></script>
-                    <script src="js/vendor/what-input.min.js"></script>
-                    <script src="js/foundation.min.js"></script>
-                    <script src="js/app.js"></script>
+            </div>
+        </div>
+        <div class="row blog2">
+            <div class="large-3 columns"></div>
+            <div class="large-9 columns"></div>
+
+        </div>
+
+    </div>
+
+
+    <script src="js/vendor/jquery.min.js"></script>
+    <script src="js/vendor/what-input.min.js"></script>
+    <script src="js/foundation.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
