--- a/blog.html
+++ b/blog.html
@@ -53,14 +53,17 @@
 
 
             </div>
-            <div class="large-9 columns">
+            <div class="large-9 columns blogger">
                 <ul class="inspire">
 
-                    <li> Technology
+                    <li>
+                        <a href="#"></a>Technology
                     </li>
-                    <li> Inspiration
+                    <li>
+                        <a href="#"></a>Inspiration
                     </li>
-                    <li> Design
+                    <li>
+                        <a href="#"></a>Design
                     </li>
 
                 </ul>
@@ -68,19 +71,28 @@
 
             </div>
         </div>
+
+<!--        row 2 with blog heading-->
         <div class="row blog2">
-            <div class="large-3 columns"></div>
-            <div class="large-9 columns"></div>
+            <div class="large-12 columns">
+            </div></div>
+
+
+            <div class="row blog3">
+                <div class="large-3 columns">
+
+                </div>
+                <div class="large-9 columns"></div>
+
+            </div>
 
         </div>
 
-    </div>
 
-
-    <script src="js/vendor/jquery.min.js"></script>
-    <script src="js/vendor/what-input.min.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <script src="js/app.js"></script>
+        <script src="js/vendor/jquery.min.js"></script>
+        <script src="js/vendor/what-input.min.js"></script>
+        <script src="js/foundation.min.js"></script>
+        <script src="js/app.js"></script>
 </body>
 
 </html>
