changing classes that had similar names

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Teko' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:700italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -146,14 +147,14 @@
         </div>
         <div class="large-4 columns ">
 
-    <div class="image-wrapper overlay-slide-in-left">
+            <div class="image-wrapper overlay-slide-in-left">
 
-            <a href="http://gameofthrones.bitballoon.com/">
-                 <img src="img/game%20of%20thrones.png" alt=""/>
+                <a href="http://gameofthrones.bitballoon.com/">
+                    <img src="img/game%20of%20thrones.png" alt="" />
                 </a>
-<div class="image-overlay-content">
-<h2>Game of Thrones</h2>
-             </div>
+                <div class="image-overlay-content">
+                    <h2>Game of Thrones</h2>
+                </div>
 
             </div>
 
@@ -174,6 +175,7 @@
             <h6 class="img_title">A hotel website </h6>
         </div>
     </div>
+
     <div class="row four">
         <div class="large-12 columns">
             <h2 class="blogger">Blog</h2>
