--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Teko' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:700italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -53,7 +54,7 @@
 
 
             </div>
-            <div class="large-9 columns blogger">
+            <div class="large-9 columns white">
                 <ul class="inspire">
 
                     <li>
@@ -72,27 +73,29 @@
             </div>
         </div>
 
-<!--        row 2 with blog heading-->
+        <!--        row 2 with blog heading-->
         <div class="row blog2">
-            <div class="large-12 columns">
-            </div></div>
-
-
-            <div class="row blog3">
-                <div class="large-3 columns">
-
-                </div>
-                <div class="large-9 columns"></div>
-
+            <div class="large-12 columns poster">
+                <h2>How to create a Drop Down Navigation Menu </h2>
             </div>
-
         </div>
 
 
-        <script src="js/vendor/jquery.min.js"></script>
-        <script src="js/vendor/what-input.min.js"></script>
-        <script src="js/foundation.min.js"></script>
-        <script src="js/app.js"></script>
+        <div class="row blog3">
+            <div class="large-3 columns">
+
+            </div>
+            <div class="large-9 columns"></div>
+
+        </div>
+
+    </div>
+
+
+    <script src="js/vendor/jquery.min.js"></script>
+    <script src="js/vendor/what-input.min.js"></script>
+    <script src="js/foundation.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
