--- a/blog.html
+++ b/blog.html
@@ -76,16 +76,19 @@
         <!--        row 2 with blog heading-->
         <div class="row blog2">
             <div class="large-12 columns poster">
-                <h2>How to create a Drop Down Navigation Menu </h2>
+                <h2 class="black">How to create a Drop Down <br>Navigation Menu </h2>
             </div>
         </div>
 
+        <!--Row 3 contents has article -->
 
         <div class="row blog3">
             <div class="large-3 columns">
 
             </div>
-            <div class="large-9 columns"></div>
+            <div class="large-9 columns">
+
+            </div>
 
         </div>
 
