added a contact me row  in home page

--- a/blog.html
+++ b/blog.html
@@ -83,11 +83,14 @@
         <!--Row 3 contents has article -->
 
         <div class="row blog3">
-            <div class="large-3 columns">
+            <div class="large-3 columns intro">
+                <p class="date"> Published April, 13th 2016
+                    <br> Estimated Reading Time: 20min</p>
+                <p class="owner">Written by ciku Mwangi</p>
 
             </div>
             <div class="large-9 columns">
-
+                Article +content +content
             </div>
 
         </div>
