--- a/index.html
+++ b/index.html
@@ -193,6 +193,14 @@
         <div class="large-12 columns five_col">
         </div>
     </div>
+<!--    My Contact form -->
+        <div class="row form">
+        <div class="large-12 columns">
+        </div>
+
+    </div>
+    <!--    My Contact form -->
+
     <!--        Foooter with contacts and copyright info -->
     <div class="row footer">
         <div class="large-6 columns">
