--- a/index.html
+++ b/index.html
@@ -135,44 +135,45 @@
 
         <div class="large-4 columns ">
 
-            <div class="img1 border">
-                <a href="http://frontendsiteb.bitballoon.com/"></div>
-            </a>
+            <div class="img1">
+                <a href="http://frontendsiteb.bitballoon.com/">
+                <img src="img/FrontEndWebpng"/>
+
             <!--Overlay text on image hover-->
-            <span class="transition overlay">
+            <span class="transition-overlay">
                     <h2>Front End<br> Development</h2>
-                </span>
+                </span></a></div>
             <!--Overlay text on image hover-->
-            <h6 class="img_title">PSD to HTML page</h6>
+
         </div>
         <div class="large-4 columns ">
 
-            <div class="image-wrapper overlay-slide-in-left">
+            <div class="imag2">
 
                 <a href="http://gameofthrones.bitballoon.com/">
                     <img src="img/game%20of%20thrones.png" alt="" />
-                </a>
-                <div class="image-overlay-content">
-                    <h2>Game of Thrones</h2>
-                </div>
 
+                <span class="transition-overlay">
+                    <h2>Game of Thrones</h2>
+                </span>
+                </a>
             </div>
 
             <!--                 Overlay text on image hover-->
 
             <!--Overlay text on image hover-->
-            <h6 class="img_title">A Movie website </h6>
+
         </div>
         <div class="large-4 columns ">
+            <div class="imag3">
             <a href="http://queens-hotel.bitballoon.com/">
-                <div class="img3 border"></div>
-            </a>
+            <img src="img/queens.png"/>
             <!--Overlay text on image hover-->
-            <span class="transition overlay">
+            <span class="transition-overlay">
                     <h2> Queens Hotel</h2>
                 </span>
             <!--Overlay text on image hover-->
-            <h6 class="img_title">A hotel website </h6>
+                </a>
         </div>
     </div>
 
@@ -196,6 +197,7 @@
 <!--    My Contact form -->
         <div class="row form">
         <div class="large-12 columns">
+
         </div>
 
     </div>
